crates/regolith-syntax/tests/snapshots/snapshots__tokens@examples_tracks_cuprite_buck_converter_cupr.snap
---
source: crates/regolith-syntax/tests/snapshots.rs
expression: "dump(Stage::Tokens, &source, &file)"
---
Comment@0..64 "# 5V buck converter block -- exercises: an abstract block with a"
Newline@64..65 "\n"
Comment@65..132 "# continuous spec over a load/line domain, impl-chosen `params:` vs"
Newline@132..133 "\n"
Comment@133..201 "# caller-chosen `<...>`, the `impl by circuit` body shape (component"
Newline@201..202 "\n"
Comment@202..269 "# classes + `nets:`, settled this cycle), directional supply ports,"
Newline@269..270 "\n"
Comment@270..341 "# startup masks, ripple and transient claims, and a dissipation promise"
Newline@341..342 "\n"
Comment@342..377 "# for cross-domain thermal handoff."
Newline@377..378 "\n"
Newline@378..379 "\n"
ImportKw@379..385 "import"
Whitespace@385..386 " "
Ident@386..389 "std"
Dot@389..390 "."
Ident@390..394 "elec"
Dot@394..395 "."
Ident@395..400 "power"
Whitespace@400..401 " "
LParen@401..402 "("
Ident@402..410 "Inductor"
Comma@410..411 ","
Whitespace@411..412 " "
Ident@412..421 "Capacitor"
Comma@421..422 ","
Whitespace@422..423 " "
Ident@423..438 "ResistorDivider"
RParen@438..439 ")"
Newline@439..440 "\n"
Newline@440..441 "\n"
BlockKw@441..446 "block"
Whitespace@446..447 " "
Ident@447..451 "Buck"
Lt@451..452 "<"
Ident@452..457 "v_out"
Colon@457..458 ":"
Whitespace@458..459 " "
Ident@459..466 "voltage"
Whitespace@466..467 " "
Eq@467..468 "="
Whitespace@468..469 " "
Number@469..472 "5.0"
Ident@472..473 "V"
Comma@473..474 ","
Whitespace@474..475 " "
Ident@475..480 "i_max"
Colon@480..481 ":"
Whitespace@481..482 " "
Ident@482..489 "current"
Whitespace@489..490 " "
Eq@490..491 "="
Whitespace@491..492 " "
Number@492..493 "2"
Ident@493..494 "A"
Gt@494..495 ">"
Colon@495..496 ":"
Newline@496..497 "\n"
Whitespace@497..501 "    "
Indent@501..501 ""
Ident@501..506 "ports"
Colon@506..507 ":"
Newline@507..508 "\n"
Whitespace@508..516 "        "
Indent@516..516 ""
Ident@516..519 "vin"
Colon@519..520 ":"
Whitespace@520..521 " "
Ident@521..527 "supply"
LParen@527..528 "("
InKw@528..530 "in"
Comma@530..531 ","
Whitespace@531..532 " "
LBracket@532..533 "["
Number@533..534 "7"
Ident@534..535 "V"
Comma@535..536 ","
Whitespace@536..537 " "
Number@537..539 "24"
Ident@539..540 "V"
RBracket@540..541 "]"
RParen@541..542 ")"
Newline@542..543 "\n"
Whitespace@543..551 "        "
Ident@551..554 "out"
Colon@554..555 ":"
Whitespace@555..556 " "
Ident@556..562 "supply"
LParen@562..563 "("
Ident@563..566 "out"
Comma@566..567 ","
Whitespace@567..568 " "
Ident@568..573 "v_out"
Whitespace@573..574 " "
PlusMinus@574..576 "+-"
Whitespace@576..577 " "
Number@577..578 "2"
Percent@578..579 "%"
Comma@579..580 ","
Whitespace@580..581 " "
Ident@581..582 "i"
Whitespace@582..583 " "
LtEq@583..585 "<="
Whitespace@585..586 " "
Ident@586..591 "i_max"
RParen@591..592 ")"
Newline@592..593 "\n"
Whitespace@593..601 "        "
Ident@601..604 "gnd"
Colon@604..605 ":"
Whitespace@605..606 " "
Ident@606..615 "reference"
Newline@615..616 "\n"
Whitespace@616..624 "        "
Ident@624..626 "en"
Colon@626..627 ":"
Whitespace@627..629 "  "
Ident@629..636 "digital"
LParen@636..637 "("
InKw@637..639 "in"
Comma@639..640 ","
Whitespace@640..641 " "
Ident@641..647 "family"
Eq@647..648 "="
Ident@648..656 "cmos_3v3"
RParen@656..657 ")"
Newline@657..658 "\n"
Whitespace@658..662 "    "
Dedent@662..662 ""
Ident@662..668 "params"
Colon@668..669 ":"
Newline@669..670 "\n"
Whitespace@670..678 "        "
Indent@678..678 ""
Ident@678..682 "f_sw"
Colon@682..683 ":"
Whitespace@683..684 " "
Ident@684..693 "frequency"
Whitespace@693..694 " "
Eq@694..695 "="
Whitespace@695..696 " "
InKw@696..698 "in"
Whitespace@698..699 " "
LBracket@699..700 "["
Number@700..703 "300"
Ident@703..706 "kHz"
Comma@706..707 ","
Whitespace@707..708 " "
Number@708..711 "1.2"
Ident@711..714 "MHz"
RBracket@714..715 "]"
Whitespace@715..718 "   "
Comment@718..745 "# impl-chosen (existential)"
Newline@745..746 "\n"
Whitespace@746..750 "    "
Dedent@750..750 ""
Ident@750..754 "spec"
Colon@754..755 ":"
Newline@755..756 "\n"
Whitespace@756..764 "        "
Comment@764..826 "# Regulation law over the whole line/load domain. `= x +- tol`"
Newline@826..827 "\n"
Whitespace@827..835 "        "
Comment@835..896 "# is an equal_within constraint declaration, not banned `==`."
Newline@896..897 "\n"
Whitespace@897..905 "        "
Indent@905..905 ""
Ident@905..911 "forall"
Whitespace@911..912 " "
Ident@912..913 "i"
LParen@913..914 "("
Ident@914..917 "out"
RParen@917..918 ")"
Whitespace@918..919 " "
InKw@919..921 "in"
Whitespace@921..922 " "
LBracket@922..923 "["
Number@923..924 "0"
Ident@924..925 "A"
Comma@925..926 ","
Whitespace@926..927 " "
Ident@927..932 "i_max"
RBracket@932..933 "]"
Comma@933..934 ","
Whitespace@934..935 " "
Ident@935..936 "v"
LParen@936..937 "("
Ident@937..940 "vin"
RParen@940..941 ")"
Whitespace@941..942 " "
InKw@942..944 "in"
Whitespace@944..945 " "
LBracket@945..946 "["
Number@946..947 "7"
Ident@947..948 "V"
Comma@948..949 ","
Whitespace@949..950 " "
Number@950..952 "24"
Ident@952..953 "V"
RBracket@953..954 "]"
Colon@954..955 ":"
Newline@955..956 "\n"
Whitespace@956..968 "            "
Indent@968..968 ""
Ident@968..969 "v"
LParen@969..970 "("
Ident@970..973 "out"
RParen@973..974 ")"
Whitespace@974..975 " "
Eq@975..976 "="
Whitespace@976..977 " "
Ident@977..982 "v_out"
Whitespace@982..983 " "
PlusMinus@983..985 "+-"
Whitespace@985..986 " "
Number@986..987 "2"
Percent@987..988 "%"
Newline@988..989 "\n"
Whitespace@989..993 "    "
Dedent@993..993 ""
Dedent@993..993 ""
Ident@993..1001 "promises"
Colon@1001..1002 ":"
Newline@1002..1003 "\n"
Whitespace@1003..1011 "        "
Indent@1011..1011 ""
Ident@1011..1016 "power"
Colon@1016..1017 ":"
Whitespace@1017..1018 " "
Ident@1018..1029 "dissipation"
Whitespace@1029..1030 " "
LtEq@1030..1032 "<="
Whitespace@1032..1033 " "
Number@1033..1036 "1.2"
Ident@1036..1037 "W"
Whitespace@1037..1047 "          "
Comment@1047..1073 "# thermal boundary for the"
Newline@1073..1074 "\n"
Whitespace@1074..1118 "                                            "
Comment@1118..1143 "# enclosure's mech claims"
Newline@1143..1144 "\n"
Whitespace@1144..1152 "        "
Ident@1152..1158 "timing"
Dot@1158..1159 "."
Ident@1159..1166 "startup"
LParen@1166..1167 "("
Ident@1167..1169 "en"
Whitespace@1169..1170 " "
Minus@1170..1171 "-"
Gt@1171..1172 ">"
Whitespace@1172..1173 " "
Ident@1173..1176 "out"
RParen@1176..1177 ")"
Colon@1177..1178 ":"
Whitespace@1178..1179 " "
LtEq@1179..1181 "<="
Whitespace@1181..1182 " "
Number@1182..1183 "5"
Ident@1183..1185 "ms"
Newline@1185..1186 "\n"
Newline@1186..1187 "\n"
Whitespace@1187..1191 "    "
Dedent@1191..1191 ""
EventKw@1191..1196 "event"
Whitespace@1196..1197 " "
Ident@1197..1204 "enabled"
Colon@1204..1205 ":"
Whitespace@1205..1206 " "
Ident@1206..1207 "v"
LParen@1207..1208 "("
Ident@1208..1210 "en"
RParen@1210..1211 ")"
Dot@1211..1212 "."
Ident@1212..1219 "crosses"
LParen@1219..1220 "("
Ident@1220..1223 "vih"
RParen@1223..1224 ")"
Newline@1224..1225 "\n"
Whitespace@1225..1229 "    "
EventKw@1229..1234 "event"
Whitespace@1234..1235 " "
Ident@1235..1244 "load_step"
Colon@1244..1245 ":"
Whitespace@1245..1246 " "
Ident@1246..1250 "step"
LParen@1250..1251 "("
Ident@1251..1252 "i"
LParen@1252..1253 "("
Ident@1253..1256 "out"
RParen@1256..1257 ")"
Comma@1257..1258 ","
Whitespace@1258..1259 " "
Number@1259..1260 "1"
Ident@1260..1261 "A"
Slash@1261..1262 "/"
Ident@1262..1264 "us"
RParen@1264..1265 ")"
Newline@1265..1266 "\n"
Newline@1266..1267 "\n"
Whitespace@1267..1271 "    "
RequireKw@1271..1278 "require"
Whitespace@1278..1279 " "
Ident@1279..1289 "Regulation"
Colon@1289..1290 ":"
Newline@1290..1291 "\n"
Whitespace@1291..1299 "        "
Indent@1299..1299 ""
Ident@1299..1305 "ripple"
Colon@1305..1306 ":"
Whitespace@1306..1310 "    "
Ident@1310..1313 "rms"
LParen@1313..1314 "("
Ident@1314..1315 "v"
LParen@1315..1316 "("
Ident@1316..1319 "out"
RParen@1319..1320 ")"
Comma@1320..1321 ","
Whitespace@1321..1322 " "
Ident@1322..1326 "band"
Eq@1326..1327 "="
LBracket@1327..1328 "["
Number@1328..1331 "100"
Ident@1331..1334 "kHz"
Comma@1334..1335 ","
Whitespace@1335..1336 " "
Number@1336..1338 "10"
Ident@1338..1341 "MHz"
RBracket@1341..1342 "]"
RParen@1342..1343 ")"
Whitespace@1343..1344 " "
Lt@1344..1345 "<"
Whitespace@1345..1346 " "
Number@1346..1348 "20"
Ident@1348..1350 "mV"
Newline@1350..1351 "\n"
Whitespace@1351..1359 "        "
Ident@1359..1368 "transient"
Colon@1368..1369 ":"
Whitespace@1369..1370 " "
Ident@1370..1377 "settles"
LParen@1377..1378 "("
Ident@1378..1379 "v"
LParen@1379..1380 "("
Ident@1380..1383 "out"
RParen@1383..1384 ")"
Comma@1384..1385 ","
Whitespace@1385..1386 " "
Ident@1386..1388 "to"
Eq@1388..1389 "="
PlusMinus@1389..1391 "+-"
Number@1391..1392 "2"
Percent@1392..1393 "%"
Comma@1393..1394 ","
Whitespace@1394..1395 " "
WithinKw@1395..1401 "within"
Whitespace@1401..1402 " "
Number@1402..1405 "500"
Ident@1405..1407 "us"
Whitespace@1407..1408 " "
Ident@1408..1413 "after"
Whitespace@1413..1414 " "
Ident@1414..1423 "load_step"
RParen@1423..1424 ")"
Newline@1424..1425 "\n"
Whitespace@1425..1433 "        "
Ident@1433..1442 "softstart"
Colon@1442..1443 ":"
Whitespace@1443..1444 " "
Ident@1444..1456 "stays_within"
LParen@1456..1457 "("
Ident@1457..1458 "v"
LParen@1458..1459 "("
Ident@1459..1462 "out"
RParen@1462..1463 ")"
Comma@1463..1464 ","
Whitespace@1464..1465 " "
Ident@1465..1469 "mask"
Eq@1469..1470 "="
Ident@1470..1484 "monotonic_rise"
LParen@1484..1485 "("
Number@1485..1486 "5"
Ident@1486..1488 "ms"
RParen@1488..1489 ")"
Comma@1489..1490 ","
Whitespace@1490..1491 "\n"
Whitespace@1491..1514 "                       "
WithinKw@1514..1520 "within"
Whitespace@1520..1521 " "
Number@1521..1522 "5"
Ident@1522..1524 "ms"
Whitespace@1524..1525 " "
Ident@1525..1530 "after"
Whitespace@1530..1531 " "
Ident@1531..1538 "enabled"
RParen@1538..1539 ")"
Newline@1539..1540 "\n"
Whitespace@1540..1544 "    "
Dedent@1544..1544 ""
RequireKw@1544..1551 "require"
Whitespace@1551..1552 " "
Ident@1552..1562 "Efficiency"
Colon@1562..1563 ":"
Newline@1563..1564 "\n"
Whitespace@1564..1572 "        "
Indent@1572..1572 ""
Ident@1572..1575 "eta"
Colon@1575..1576 ":"
Whitespace@1576..1577 " "
Ident@1577..1583 "forall"
Whitespace@1583..1584 " "
Ident@1584..1585 "i"
LParen@1585..1586 "("
Ident@1586..1589 "out"
RParen@1589..1590 ")"
Whitespace@1590..1591 " "
InKw@1591..1593 "in"
Whitespace@1593..1594 " "
LBracket@1594..1595 "["
Number@1595..1598 "0.2"
Ident@1598..1599 "A"
Comma@1599..1600 ","
Whitespace@1600..1601 " "
Ident@1601..1606 "i_max"
RBracket@1606..1607 "]"
Colon@1607..1608 ":"
Newline@1608..1609 "\n"
Whitespace@1609..1626 "                 "
Indent@1626..1626 ""
Ident@1626..1630 "elec"
Dot@1630..1631 "."
Ident@1631..1636 "power"
LParen@1636..1637 "("
Ident@1637..1640 "out"
RParen@1640..1641 ")"
Whitespace@1641..1642 " "
Slash@1642..1643 "/"
Whitespace@1643..1644 " "
Ident@1644..1648 "elec"
Dot@1648..1649 "."
Ident@1649..1654 "power"
LParen@1654..1655 "("
Ident@1655..1658 "vin"
RParen@1658..1659 ")"
Whitespace@1659..1660 " "
GtEq@1660..1662 ">="
Whitespace@1662..1663 " "
Number@1663..1665 "85"
Percent@1665..1666 "%"
Newline@1666..1667 "\n"
Newline@1667..1668 "\n"
Dedent@1668..1668 ""
Dedent@1668..1668 ""
Dedent@1668..1668 ""
ImplKw@1668..1672 "impl"
Whitespace@1672..1673 " "
Ident@1673..1677 "Buck"
Whitespace@1677..1678 " "
ByKw@1678..1680 "by"
Whitespace@1680..1681 " "
Ident@1681..1688 "circuit"
Colon@1688..1689 ":"
Newline@1689..1690 "\n"
Whitespace@1690..1694 "    "
Indent@1694..1694 ""
ThenKw@1694..1698 "then"
Colon@1698..1699 ":"
Newline@1699..1700 "\n"
Whitespace@1700..1708 "        "
Indent@1708..1708 ""
Ident@1708..1710 "u1"
Whitespace@1710..1714 "    "
Eq@1714..1715 "="
Whitespace@1715..1716 " "
Ident@1716..1722 "vendor"
LParen@1722..1723 "("
Ident@1723..1731 "tps54331"
RParen@1731..1732 ")"
Whitespace@1732..1753 "                     "
Comment@1753..1774 "# controller + switch"
Newline@1774..1775 "\n"
Whitespace@1775..1783 "        "
Ident@1783..1785 "l1"
Whitespace@1785..1789 "    "
Eq@1789..1790 "="
Whitespace@1790..1791 " "
Ident@1791..1799 "Inductor"
LParen@1799..1800 "("
Ident@1800..1801 "l"
Eq@1801..1802 "="
InKw@1802..1804 "in"
Whitespace@1804..1805 " "
LBracket@1805..1806 "["
Number@1806..1808 "10"
Ident@1808..1810 "uH"
Comma@1810..1811 ","
Whitespace@1811..1812 " "
Number@1812..1814 "47"
Ident@1814..1816 "uH"
RBracket@1816..1817 "]"
Comma@1817..1818 ","
Whitespace@1818..1819 " "
Ident@1819..1824 "i_sat"
Whitespace@1824..1825 " "
GtEq@1825..1827 ">="
Whitespace@1827..1828 " "
Number@1828..1831 "1.3"
Whitespace@1831..1832 " "
Star@1832..1833 "*"
Whitespace@1833..1834 " "
Ident@1834..1839 "i_max"
RParen@1839..1840 ")"
Newline@1840..1841 "\n"
Whitespace@1841..1849 "        "
Ident@1849..1853 "c_in"
Whitespace@1853..1855 "  "
Eq@1855..1856 "="
Whitespace@1856..1857 " "
Ident@1857..1866 "Capacitor"
LParen@1866..1867 "("
Ident@1867..1868 "c"
Eq@1868..1869 "="
InKw@1869..1871 "in"
Whitespace@1871..1872 " "
LBracket@1872..1873 "["
Number@1873..1876 "4.7"
Ident@1876..1878 "uF"
Comma@1878..1879 ","
Whitespace@1879..1880 " "
Number@1880..1882 "22"
Ident@1882..1884 "uF"
RBracket@1884..1885 "]"
Comma@1885..1886 ","
Whitespace@1886..1887 " "
Ident@1887..1894 "v_rated"
Whitespace@1894..1895 " "
GtEq@1895..1897 ">="
Whitespace@1897..1898 " "
Number@1898..1900 "35"
Ident@1900..1901 "V"
Comma@1901..1902 ","
Whitespace@1902..1903 " "
Ident@1903..1906 "x7r"
RParen@1906..1907 ")"
Newline@1907..1908 "\n"
Whitespace@1908..1916 "        "
Ident@1916..1921 "c_out"
Whitespace@1921..1922 " "
Eq@1922..1923 "="
Whitespace@1923..1924 " "
Ident@1924..1933 "Capacitor"
LParen@1933..1934 "("
Ident@1934..1935 "c"
Eq@1935..1936 "="
InKw@1936..1938 "in"
Whitespace@1938..1939 " "
LBracket@1939..1940 "["
Number@1940..1942 "22"
Ident@1942..1944 "uF"
Comma@1944..1945 ","
Whitespace@1945..1946 " "
Number@1946..1949 "100"
Ident@1949..1951 "uF"
RBracket@1951..1952 "]"
Comma@1952..1953 ","
Whitespace@1953..1954 " "
Ident@1954..1961 "v_rated"
Whitespace@1961..1962 " "
GtEq@1962..1964 ">="
Whitespace@1964..1965 " "
Number@1965..1967 "10"
Ident@1967..1968 "V"
Comma@1968..1969 ","
Whitespace@1969..1970 " "
Ident@1970..1973 "x7r"
RParen@1973..1974 ")"
Newline@1974..1975 "\n"
Whitespace@1975..1983 "        "
Ident@1983..1985 "fb"
Whitespace@1985..1989 "    "
Eq@1989..1990 "="
Whitespace@1990..1991 " "
Ident@1991..2006 "ResistorDivider"
LParen@2006..2007 "("
Ident@2007..2012 "ratio"
Eq@2012..2013 "="
DerivedKw@2013..2020 "derived"
Comma@2020..2021 ","
Whitespace@2021..2022 " "
Ident@2022..2023 "z"
Eq@2023..2024 "="
InKw@2024..2026 "in"
Whitespace@2026..2027 " "
LBracket@2027..2028 "["
Number@2028..2030 "10"
Ident@2030..2034 "kohm"
Comma@2034..2035 ","
Whitespace@2035..2036 " "
Number@2036..2039 "100"
Ident@2039..2043 "kohm"
RBracket@2043..2044 "]"
RParen@2044..2045 ")"
Newline@2045..2046 "\n"
Whitespace@2046..2050 "    "
Dedent@2050..2050 ""
Ident@2050..2054 "nets"
Colon@2054..2055 ":"
Newline@2055..2056 "\n"
Whitespace@2056..2064 "        "
Comment@2064..2123 "# `nets:` joins terminals. Power/analog nets are relational"
Newline@2123..2124 "\n"
Whitespace@2124..2132 "        "
Comment@2132..2188 "# (KCL), not single-driver; the v1 analog net discipline"
Newline@2188..2189 "\n"
Whitespace@2189..2197 "        "
Comment@2197..2261 "# (terminal ledger, reference reachability, one voltage-imposer,"
Newline@2261..2262 "\n"
Whitespace@2262..2270 "        "
Comment@2270..2310 "# supply-short check) is elec 03 sec. 2."
Newline@2310..2311 "\n"
Whitespace@2311..2319 "        "
Indent@2319..2319 ""
Ident@2319..2322 "swn"
Colon@2322..2323 ":"
Whitespace@2323..2325 "  "
LParen@2325..2326 "("
Ident@2326..2328 "u1"
Dot@2328..2329 "."
Ident@2329..2331 "sw"
Comma@2331..2332 ","
Whitespace@2332..2333 " "
Ident@2333..2335 "l1"
Dot@2335..2336 "."
Ident@2336..2337 "a"
RParen@2337..2338 ")"
Newline@2338..2339 "\n"
Whitespace@2339..2347 "        "
Ident@2347..2351 "outn"
Colon@2351..2352 ":"
Whitespace@2352..2353 " "
LParen@2353..2354 "("
Ident@2354..2356 "l1"
Dot@2356..2357 "."
Ident@2357..2358 "b"
Comma@2358..2359 ","
Whitespace@2359..2360 " "
Ident@2360..2365 "c_out"
Dot@2365..2366 "."
Ident@2366..2367 "a"
Comma@2367..2368 ","
Whitespace@2368..2369 " "
Ident@2369..2371 "fb"
Dot@2371..2372 "."
Ident@2372..2375 "top"
Comma@2375..2376 ","
Whitespace@2376..2377 " "
Ident@2377..2380 "out"
RParen@2380..2381 ")"
Newline@2381..2382 "\n"
Whitespace@2382..2390 "        "
Ident@2390..2393 "inn"
Colon@2393..2394 ":"
Whitespace@2394..2396 "  "
LParen@2396..2397 "("
Ident@2397..2400 "vin"
Comma@2400..2401 ","
Whitespace@2401..2402 " "
Ident@2402..2406 "c_in"
Dot@2406..2407 "."
Ident@2407..2408 "a"
Comma@2408..2409 ","
Whitespace@2409..2410 " "
Ident@2410..2412 "u1"
Dot@2412..2413 "."
Ident@2413..2416 "vin"
RParen@2416..2417 ")"
Newline@2417..2418 "\n"
Whitespace@2418..2426 "        "
Ident@2426..2429 "fbn"
Colon@2429..2430 ":"
Whitespace@2430..2432 "  "
LParen@2432..2433 "("
Ident@2433..2435 "fb"
Dot@2435..2436 "."
Ident@2436..2439 "mid"
Comma@2439..2440 ","
Whitespace@2440..2441 " "
Ident@2441..2443 "u1"
Dot@2443..2444 "."
Ident@2444..2446 "fb"
RParen@2446..2447 ")"
Newline@2447..2448 "\n"
Whitespace@2448..2456 "        "
Ident@2456..2460 "gndn"
Colon@2460..2461 ":"
Whitespace@2461..2462 " "
LParen@2462..2463 "("
Ident@2463..2466 "gnd"
Comma@2466..2467 ","
Whitespace@2467..2468 " "
Ident@2468..2472 "c_in"
Dot@2472..2473 "."
Ident@2473..2474 "b"
Comma@2474..2475 ","
Whitespace@2475..2476 " "
Ident@2476..2481 "c_out"
Dot@2481..2482 "."
Ident@2482..2483 "b"
Comma@2483..2484 ","
Whitespace@2484..2485 " "
Ident@2485..2487 "fb"
Dot@2487..2488 "."
Ident@2488..2494 "bottom"
Comma@2494..2495 ","
Whitespace@2495..2496 " "
Ident@2496..2498 "u1"
Dot@2498..2499 "."
Ident@2499..2502 "gnd"
RParen@2502..2503 ")"
Newline@2503..2504 "\n"
Whitespace@2504..2512 "        "
Ident@2512..2515 "enn"
Colon@2515..2516 ":"
Whitespace@2516..2518 "  "
LParen@2518..2519 "("
Ident@2519..2521 "en"
Comma@2521..2522 ","
Whitespace@2522..2523 " "
Ident@2523..2525 "u1"
Dot@2525..2526 "."
Ident@2526..2528 "en"
RParen@2528..2529 ")"
Newline@2529..2530 "\n"
Whitespace@2530..2534 "    "
Comment@2534..2602 "# Equivalence of this circuit to the spec: T3 obligation, discharged"
Newline@2602..2603 "\n"
Whitespace@2603..2607 "    "
Comment@2607..2673 "# by DC-sweep + transient analysis with declared coverage over the"
Newline@2673..2674 "\n"
Whitespace@2674..2678 "    "
Comment@2678..2733 "# forall domain. Component values land in the lockfile:"
Newline@2733..2734 "\n"
Whitespace@2734..2738 "    "
Comment@2738..2794 "#   l1.l = 22uH     cause: obligation(Regulation.ripple)"
Newline@2794..2795 "\n"
Whitespace@2795..2799 "    "
Comment@2799..2858 "#   c_out.c = 47uF  cause: obligation(Regulation.transient)"
Newline@2858..2859 "\n"
Dedent@2859..2859 ""
Dedent@2859..2859 ""
